--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         # 使用 skopeo 工具将镜像同步到阿里云个人仓库中，使用时请自行源和目标修改仓库名称和镜像名称
-        skopeo copy docker://docker.io/nacos/nacos-server:1.1.4 docker://crpi-epdd67m46315es8d.cn-hangzhou.personal.cr.aliyuncs.com/bb4303/nacos/nacos-server:1.1.4
+        skopeo copy docker://docker.io/nacos/nacos-server:1.4.2 docker://crpi-epdd67m46315es8d.cn-hangzhou.personal.cr.aliyuncs.com/bb4303/nacos-server:1.4.2
